📦 Refactor predicates